--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^12.0.5",
     "express": "^4.17.1",
     "mongoose": "^5.5.13",
+    "pug": "^2.0.3",
     "rimraf": "^2.6.3",
     "typescript": "^3.5.1"
   }
