--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.5",
     "@types/node": "^12.0.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.5.13",
     "pug": "^2.0.3",
