--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean:dist": "rimraf dist",
     "clean:modules": "rimraf node_modules",
     "prestart": "npm run clean && npm run tsc",
-    "start": "node ./dist/index.js",
+    "start": "node -r dotenv/config ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.5",
     "@types/node": "^12.0.5",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.5.13",
     "pug": "^2.0.3",
